--- a/apps/templates/list_of_apps_search.html
+++ b/apps/templates/list_of_apps_search.html
@@ -20,7 +20,7 @@
       </table>
     </div>
     <h4></h4>
-    {% app_buttons apps_with_releases %}
+    {% app_buttons apps_with_releases cx_platform %}
   </div>
  <!--
   <script type="text/javascript" src="{% get_static_prefix %}apps/js/sort_app_buttons.js"></script>
@@ -35,7 +35,7 @@
 {% if apps_without_releases %}
   <div class="row">
 	<h4></h4>
-    {% app_buttons apps_without_releases %}
+    {% app_buttons apps_without_releases cx_platform %}
   
 
   </div>
