--- a/help/templates/about.html
+++ b/help/templates/about.html
@@ -12,25 +12,34 @@
 
 	<div class="row">
 		<div class="span12">
-		<p>Coming soon...</p>
+		<h2>UCSF ChimeraX Toolshed</h2>
+		The <a href="https://www.rbvi.ucsf.edu/chimerax/">UCSF ChimeraX</a> Toolshed provides
+		a convenient way of delivering (molecular) tools to ChimeraX users.
+		Developers can sign up to submit applications and users can easily find them. 
 		</div>
 	</div>
 
-	<!--
 	<div class="row">
 		<div class="span12">
-			<h2>Cite us!</h2>
-			Was the Cytoscape App Store helpful in your work?
-			<a href="http://www.ncbi.nlm.nih.gov/pubmed/23595664" target="_blank" style="font-weight: bold;">
-				♥ Cite us!
+			<!-- <h2>Cite us!</h2>
+			Was the Cytoscape App Store helpful in your work? -->
+			<h2>Technology</h2>
+			The UCSF ChimeraX Toolshed is based on the
+			<a href="https://apps.cytoscape.org">Cytoscape App Store</a>.
+			Please 
+			<a href="https://www.ncbi.nlm.nih.gov/pubmed/23595664" target="_blank" style="font-weight: bold;">
+				<!-- ♥ Cite us! -->
+				cite it
 			</a>
-			Citations help us secure funding in the future.
+			if the UCSF ChimeraX Toolshed has been useful for your work.
+			Citations help them secure funding in the future.
 			<blockquote style="margin-left: 3em; margin-top: 2em;">
 				Lotia S, Montojo J, Dong Y, Bader GD, Pico AR. Cytoscape app store. Bioinformatics. 2013 May 15;29(10):1350-1.
 			</blockquote>
 		</div>
 	</div>
 
+	<!--
 	<h2>Our Worldwide Community of App Developers</h2>
 
 	<div class="row">
@@ -60,7 +69,7 @@
                         directors and over a dozen developers from an international
                         set of member institutions. Cytoscape is committed to remaining
                         open source and freely available for the research community.
-                        Visit <a href="http://cytoscape.org">cytoscape.org</a>
+                        Visit <a href="https://cytoscape.org">cytoscape.org</a>
                         for more information.
                 </div>
         </div>
@@ -74,8 +83,8 @@
                         biology researchers and tool developers. Cytoscape is the flagship
                         resource supported by NRNB and this Cytoscape App Store, in particular,
                         was an NRNB-driven project. This site is thus supported by the NRNB
-                        grant from <a href="http://www.nigms.nih.gov/About/Overview/bbcb.htm">NIH/NIGMS/BBCB</a>,
-                        P41 GM103504. Visit <a href="http://nrnb.org">nrnb.org</a> for more information.
+                        grant from <a href="https://www.nigms.nih.gov/About/Overview/bbcb.htm">NIH/NIGMS/BBCB</a>,
+                        P41 GM103504. Visit <a href="https://nrnb.org">nrnb.org</a> for more information.
                 </div>
         </div>
 	-->
