--- a/help/templates/getstarted_app_install.html
+++ b/help/templates/getstarted_app_install.html
@@ -13,7 +13,7 @@
 
   <div class="row"><div class="span12">
       <h4>Is ChimeraX installed? If not, download it from here:
-        <a target="_blank" href="http://www.rbvi.ucsf.edu/chimerax.html">http://www.rbvi.ucsf.edu/chimerax.html</a>
+        <a target="_blank" href="https://www.rbvi.ucsf.edu/chimerax.html">https://www.rbvi.ucsf.edu/chimerax.html</a>
       </h4>
 	  <img src="{% get_static_prefix %}help/img/getstarted_app_install_cy3_install.png">
   </div></div>
