--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
   <script type="text/javascript" src="{% get_static_prefix %}common/lib/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="{% get_static_prefix %}common/lib/js/jquery.cookie.js"></script>
   
@@ -49,7 +49,7 @@
             <ul class="dropdown-menu">
               <li><a href="{% url 'submit-app' %}">Submit a ChimeraX Bundle</a></li>
               <li class="divider"></li>
-              <li><a target="_blank" href="http://www.cgl.ucsf.edu/chimerax/docs/devel/index.html">Guide to ChimeraX Development</a></li>
+              <li><a target="_blank" href="https://www.cgl.ucsf.edu/chimerax/docs/devel/index.html">Guide to ChimeraX Development</a></li>
             </ul>
           </li>
           {# Search field #}
