--- a/download/templates/all_stats.html
+++ b/download/templates/all_stats.html
@@ -76,7 +76,9 @@
   google.load('visualization', '1', {'packages': ['corechart', 'geochart', 'annotatedtimeline']});
   google.setOnLoadCallback(function() {
     AppStats.setupTimeline();
+    /* Disabled since Google requires enabling billing even for free service
     AppStats.setupGeography();
+    */
   });
 </script>
 
