--- a/help/templates/getstarted.html
+++ b/help/templates/getstarted.html
@@ -12,16 +12,16 @@
 
   <div class="row"><div class="span12">
 	  <h4>Don't know what you're looking for but just want to try out a bundle? Check out our Top Downloaded Bundles.</h4>
-	  <img src="{% get_static_prefix %}help/img/getstarted_top_downloaded_apps.png">
+	  <img src="{% get_static_prefix %}help/img/getstarted_cxt_top_downloaded_apps.png">
   </div></div>
 
   <div class="row"><div class="span12">
 	  <h4>Do you have a general idea of what kind of bundle you're looking for? Take a look at our Categories.</h4>
-	  <img src="{% get_static_prefix %}help/img/getstarted_categories.png">
+	  <img src="{% get_static_prefix %}help/img/getstarted_cxt_categories.png">
   </div></div>
 
   <div class="row"><div class="span12">
-	  <h4>Do you know the name of a bundle or someone who wrote one? Use the Search field to find apps, categories, and authors.</h4>
+	  <h4>Do you know the name of a bundle or someone who wrote one? Use the Search field to find bundles, categories, and authors.</h4>
 	  <img src="{% get_static_prefix %}help/img/getstarted_search.png">
   </div></div>
 {% endblock %}
