--- a/submit_app/templates/confirm.html
+++ b/submit_app/templates/confirm.html
@@ -50,7 +50,7 @@
                     {{ pending.fullname }}
                     (A <b>ChimeraX_</b> prefix for the bundle is recommended
                     to avoid name clash with Python distributions from
-                    <a href="http://pypi.python.org">pypi.python.org</a>.
+                    <a href="https://pypi.python.org">pypi.python.org</a>.
                     The prefix will not be displayed in the toolshed browsing
                     and download pages to simplify the output but
                     is required for all other purposes.)
