--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -9,11 +9,11 @@
     <form method="get" action=".">
  <!--       {% if query %}
             <h3>Results</h3>
-	    <h4>Apps</h4>
+	    <h4>Bundles</h4>
 	  
 	    {% for result in page.object_list %}
 	    <p>
-                    <a href="http://cytoscape-app-dev.ucsd.edu/apps/{{ result.object.name}}">{{ result.object.name }}</a>
+                    <a href="/apps/{{ result.object.name}}">{{ result.object.name }}</a>
                 </p>
             {% empty %}
                 <p>No results found.</p>
@@ -27,7 +27,7 @@
 	      
 	{% if page.object_list %}
 	
-	              <div class="row"><div class="span8"><h3>Apps</h3></div></div>
+	              <div class="row"><div class="span8"><h3>Bundles</h3></div></div>
     {% list_of_apps_search page.object_list True %}
 	{% endif %}
 	{% if page.object_list %}	  
@@ -41,7 +41,7 @@
 			
 				{% if result.object.institution %}
 				<ul>
-			<li><a href="http://apps.cytoscape.org/apps/with_author/{{result.name}}">{{ result.name }} ({{ result.institution }})</a></li>
+			<li><a href="/apps/with_author/{{result.name}}">{{ result.name }} ({{ result.institution }})</a></li>
 			{% endif %}
 		    
 		    </ul>
@@ -53,7 +53,7 @@
 <h3>Tags</h3>
 {% for result in page.object_list %}
 <ul>   {% for tag in result.object.tags.all %}
-			<li>	<a href="http://cytoscape-app-dev.ucsd.edu/apps/with_tag/{{tag.name}}">{{ tag.name }}</a> </li>
+			<li>	<a href="/apps/with_tag/{{tag.name}}">{{ tag.name }}</a> </li>
 					{% endfor %}
                 </ul>
                
