Make top navigation bar fit width of window.

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
 <body style="padding-top: 0;">
   {# Navigation bar #}
-  <div class="navbar navbar-inverse navbar-static-top">
+  <div class="navbar navbar-inverse navbar-expand-md">
     <div class="navbar-inner">
       <div class="container">
         <a href="{% url 'default-page' %}"><img src="{% get_static_prefix %}common/img/logo.png"></a>
