--- a/static/common/css/base.css
+++ b/static/common/css/base.css
@@ -14,3 +14,34 @@ body {
 .footer-divider {
   margin-left: 3em;
 }
+
+/* Bootstrap defaults: n * 60 + (n - 1) * 20
+.container {width: 940px}
+.span12 {width: 940px}
+.span11 {width: 860px}
+.span10 {width: 780px}
+.span9 {width: 700px}
+.span8 {width: 620px}
+.span7 {width: 540px}
+.span6 {width: 460px}
+.span5 {width: 380px}
+.span4 {width: 300px}
+.span3 {width: 220px}
+.span2 {width: 140px}
+.span1 {width: 60px}
+*/
+
+/* n * 50 + (n - 1) * 20 */
+.container {width: 820px}
+.span12 {width: 820px}
+.span11 {width: 750px}
+.span10 {width: 680px}
+.span9 {width: 610px}
+.span8 {width: 540px}
+.span7 {width: 470px}
+.span6 {width: 400px}
+.span5 {width: 330px}
+.span4 {width: 260px}
+.span3 {width: 180px}
+.span2 {width: 120px}
+.span1 {width: 50px}
