--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
 
       <a href="{% url 'wall_of_apps' %}">Wall of Bundles</a>
       &bull;
-      <a href="{% url 'bundle_developers' %}">Bundles Developers</a>
+      <a href="{% url 'bundle_developers' %}">Bundle Developers</a>
       &bull;
       <a href="{% url 'all_stats' %}">All Stats</a>
     </footer>
