--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -92,7 +92,7 @@
 		{# End Citations #}
 		{# discussions #}
 <a> | </a>
-<a href="https://www.biostars.org/local/search/page/?q=cytoscape+{{ app.fullname }}" target="_blank" class="has-tooltip" data-toggle="tooltip" data-title="Search BioStar for discussions about this app.">{% trans "discussions" %}</a>
+<a href="https://www.biostars.org/local/search/page/?q=chimerax+{{ app.fullname }}" target="_blank" class="has-tooltip" data-toggle="tooltip" data-title="Search BioStar for discussions about this app.">{% trans "discussions" %}</a>
 {# End Discussions #}
 		<span class="app-usage-info-divider"></span>
 
