Shown show platform in array if it's "any".

--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -312,10 +312,10 @@
 		<div class="alert alert-error">
 			No download available for
 			{% if version %}
-			ChimeraX {{ version }} on
+			ChimeraX {{ version }}
 			{% endif %}
-			{% if platform %}
-			{{ platform }}.
+			{% ifnotequal platform "any" %}
+			on {{ platform }}.
 			{% else %}
 			this platform.
 			{% endif %}
