endifnotequal matches ifnotequal, not endif

--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -318,7 +318,7 @@
 			on {{ platform }}.
 			{% else %}
 			this platform.
-			{% endif %}
+			{% endifnotequal %}
 			See <b>Release History</b> for versions available
 			on other ChimeraX versions and platforms.
 		</div>
