Upgrade to python 3.8 and latest versions of django

--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -316,11 +316,11 @@
 			{% if version %}
 			ChimeraX {{ version }}
 			{% endif %}
-			{% ifnotequal platform "any" %}
+			{% if platform != "any" %}
 			on {{ platform }}.
 			{% else %}
 			this platform.
-			{% endifnotequal %}
+			{% endif %}
 			See <b>Release History</b> for versions available
 			on other ChimeraX versions and platforms.
 		</div>
