Fix typo in conversion to Djanjo 4/Python 3.8.  #9644

--- a/apps/templates/search_panel.html
+++ b/apps/templates/search_panel.html
@@ -20,8 +20,8 @@
           <tr>
             <td>
               <h4 style="margin: 0">
-                {% ifnavbar_selected_link == "all" %} 
-                  All Apps
+                {% if navbar_selected_link == "all" %} 
+                  All Bundles
                 {% else %}
                   <a href="{% url 'all_apps' %}">All Apps</a>
                 {% endif %}
